--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.4.0
   shared_preferences: ^2.2.0
   another_flushbar: ^1.12.30
+  image_picker: ^1.0.2
 
 dev_dependencies:
   flutter_test:
