--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^1.0.2
   audioplayers: ^5.1.0
   getwidget: ^4.0.0
+  flutter_local_notifications: ^13.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
