modify the showTimeDialog and fix the notification

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   getwidget: ^4.0.0
   flutter_local_notifications: ^9.6.1
   provider: ^6.0.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
