--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_local_notifications: ^9.6.1
   provider: ^6.0.5
   intl: ^0.18.1
+  google_mobile_ads: ^4.0.0
 
 dev_dependencies:
   flutter_test:
